# ringmaster

./: .coverage  .gitignore  CNAME  DEVELOP.md  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  setup.py
doc/: authentication.md  concepts.md  handlers.md  scripts.md  setup.md  variables.md  worked_example.md
examples/0010-iam/: AWSLoadBalancerController.iam_policy.json  Certbot.iam_policy.json  EksDeploy.iam_policy.json  EksExternalSecrets.iam_policy.json  metadata.yaml
examples/0020-efs/: efs.cloudformation.yaml  metadata.yaml
examples/0030-vpc/: metadata.yaml  vpc.remote_cloudformation.yaml
examples/0110-eks-cluster/: cluster.eksctl.yaml  metadata.yaml
examples/0120-eks-cluster-access/: iam_access.sh  metadata.yaml
examples/0120-vpc-peering/: metadata.yaml  vpcpeering.cloudformation.yaml
examples/0130-docker-secret/: docker.kube-system.secret_kubectl.yaml  metadata.yaml
examples/0130-vpc-peering/: metadata.yaml
examples/0140-docker-secret/: docker.default.secret_kubectl.yaml  docker.kube-system.secret_kubectl.yaml  metadata.yaml
examples/0140-k8s-efs-driver/: metadata.yaml
examples/0150-efs-mount-targets/: metadata.yaml
examples/0150-k8s-efs-driver/: metadata.yaml
ringmaster/: api.py  aws.py  cli.py  cloudflare.py  constants.py  k8s.py  snowflake.py  solarwinds_papertrail.py  util.py  version.py
ringmaster.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ringmaster.show.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_api.py  test_aws.py  test_cli.py  test_cloudflare.py  test_util.py
(+56 files in other folders)
